--- a/cron/package.json
+++ b/cron/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "eslint . --fix",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --detectOpenHandles",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
