--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -255,6 +255,7 @@ jobs:
 
           # CircleCI Configuration
           CIRCLE_CI_BASE_URL=http://localhost:3001/circleci
+          CIRCLE_CI_API_BASE_URL=http://localhost:3001/circleci
           CIRCLE_CI_PROJECT_PATH="jayc13/my-dashboard"
           CIRCLE_CI_TOKEN="your-circle-ci-token"
           
