--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "pnpm": {
     "overrides": {
       "@faker-js/faker": "^9.3.0",
+      "fast-redact": "^3.5.0",
       "glob": "^11.0.0",
       "inflight": "npm:@zkochan/inflight@^1.0.0",
       "json-schema-ref-parser": "npm:@apidevtools/json-schema-ref-parser@^11.7.3",
