--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "rimraf": "^6.0.1",
       "glob": "^11.1.0",
       "node-forge": "^1.3.3",
-      "mdast-util-to-hast": "^13.2.1"
+      "mdast-util-to-hast": "^13.2.1",
+      "js-yaml": "^4.1.1"
     }
   }
 }
