--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,15 +19,15 @@
     "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "husky": "^9.0.11",
-    "commitlint": "^20.2.0",
     "@commitlint/cli": "^20.3.1",
-    "@commitlint/config-conventional": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.1",
     "@eslint/js": "^9.39.2",
+    "@types/jest": "^30.0.0",
+    "commitlint": "^20.3.1",
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
-    "jest": "^30.2.0",
-    "@types/jest": "^30.0.0"
+    "husky": "^9.1.7",
+    "jest": "^30.2.0"
   },
   "engines": {
     "node": "v22.20.0"
