--- a/server/railway.toml
+++ b/server/railway.toml
@@ -12,7 +12,7 @@ runtime = "V2"
 numReplicas = 1
 startCommand = "cd server && npm start"
 healthcheckPath = "/health"
-preDeployCommand = ["cd server && npm run migrate && echo 'Pre-deploy command finished'"]
+preDeployCommand = []
 sleepApplication = false
 useLegacyStacker = false
 restartPolicyType = "ON_FAILURE"
